--- a/Scroll-with-zoom-main/index.html
+++ b/Scroll-with-zoom-main/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Crafter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://codepen.io/GreenSock/pen/xxmzBrw.css">
 </head>
 
@@ -13,7 +13,13 @@
     <div class="wrapper">
         <div class="content">
             <section class="section hero"></section>
-            <section class="section gradient-purple"></section>
+            <section class="section gradient-purple">
+                <div class="columns">
+                    <div class="column">Suelos</div>
+                    <div class="column">Plantas</div>
+                    <div class="column">Próximamente</div>
+                </div>
+            </section>
             <section class="section gradient-blue"></section>
         </div>
         <div class="image-container">
@@ -23,7 +29,7 @@
     </div>
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-    <script src="sacript.js"></script>
+    <script src="js/sacript.js"></script>
 </body>
 
 </html>
