--- a/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/index.html
+++ b/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/index.html
@@ -26,8 +26,8 @@
             </section>
 
             <section class="section gradient-blue">
+                <p1>Diapositivas de Informacion</p1>
                 <div class="columns">
-                    <p1>Diapositivas de Informacion</p1>
                     <div class="column">Suelos</div>
                     <div class="column">Plantas</div>
                     <div class="column">Próximamente</div>
@@ -37,7 +37,7 @@
             <section class="section gradient-blue">
                 <div class="new-layout">
                     <div class="quote-section">
-                        Juego
+                        <button>Juego</button>
                     </div>
                 </div>
             </section>
