--- a/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/index.html
+++ b/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/index.html
@@ -26,14 +26,32 @@
             </section>
 
             <section class="section gradient-blue">
-                <p1>Diapositivas de Informacion</p1>
-                <div class="columns">
-                    <div class="column">Suelos</div>
-                    <div class="column">Plantas</div>
-                    <div class="column">Próximamente</div>
+                <div class="info-container">
+                    <p class="info-title">Diapositivas de Información</p>
+            
+                    <div class="aligned-columns">
+                        <div class="column-set">
+                            <div class="column1">Suelos</div>
+                            <img src="imag/suelos.png" alt="Suelos" class="column-image">
+                            <div class="column">Suelos humíferos (tierra Negra): Tienen abundante materia orgánica en descomposición, de color oscuro, retienen bien el agua y son excelentes para el cultivo.</div>
+                            <button class="column-button" onclick="window.location.href='https://www.canva.com/design/DAGKNQQDWdg/jbxkFIHOWZs8RQehFITmcQ/edit?utm_content=DAGKNQQDWdg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton';">Más Información</button>
+                        </div>
+                        <div class="column-set">
+                            <div class="column1">Plantas</div>
+                            <img src="imag/plantas.png" alt="Plantas" class="column-image">
+                            <div class="column">Las plantas son los seres vivos miembros del reino vegetal o phylum plantae. Se trata de organismos autótrofos, desprovistos de capacidad de movimiento, y compuestos principalmente de celulosa. Los árboles, la maleza, el césped, las algas y los arbustos, son todos miembros de este reino de la vida.</div>
+                            <button class="column-button1" onclick="window.location.href='https://www.canva.com/design/DAGPRToK340/ohV-LJQez0Kmmb2E7VXf-Q/edit?utm_content=DAGPRToK340&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton';">Más Información</button>
+                        </div>
+                        <div class="column-set">
+                            <div class="column1">Características físicas</div>
+                            <img src="imag/cf.png" alt="Características Físicas" class="column-image">
+                            <div class="column">Gleysoles: Presentan agua en forma permanente o semipermanente con fluctuaciones de nivel freático en los primeros 50 cm.</div>
+                            <button class="column-button" onclick="window.location.href='https://www.canva.com/design/DAGKNQQDWdg/jbxkFIHOWZs8RQehFITmcQ/edit?utm_content=DAGKNQQDWdg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton';">Más Información</button>
+                        </div>
+                    </div>
                 </div>
             </section>
-
+            
             <section class="section gradient-blue">
                 <div class="new-layout">
                     <div class="quote-section">
