--- a/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/index.html
+++ b/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/index.html
@@ -55,7 +55,7 @@
             <section class="section gradient-blue">
                 <div class="new-layout">
                     <div class="quote-section">
-                        <button>Juego</button>
+                        <button id="game-button" class="column-button">Juego</button>
                     </div>
                 </div>
             </section>
@@ -80,7 +80,7 @@
                     <p>Fernando Flores</p>
                 </div>
                 <div class="team-member">
-                    <img src="imag/FF.jpg" alt="Carlos Perez">
+                    <img src="imag/CP.jpg" alt="Carlos Perez">
                     <p>Carlos Perez</p>
                 </div>
             </div>
